# PicuiManager

./: .gitignore  README.md  pyproject.toml
src/: classify.py  main.py  sync.py  zip.py
src/picuimanager/: __init__.py  api.py  files.py  picui.py  settings.py  tinify.py  urls.py
src/picuimanager/buckets/: files.py  picui.py
src/picuimanager/utils/: confirm.py  logger.py  tinify.py  warning.py
